headar logo align fix

--- a/public/carnival_assets/css/style.css
+++ b/public/carnival_assets/css/style.css
@@ -365,7 +365,7 @@ ul {
 
 .navbar-default .navbar-brand {
     color: #ffffff;
-    padding: 22px 15px;
+    padding: 10px 15px
 }
 
 .navbar-default .navbar-brand:hover,
